# ReDFA

./: README.md  pyproject.toml
redfa/: dfa.py  exception.py  nfa.py  nfa2dfa.py  regex.py  state.py  thompson.py  token.py  transition.py
tests/: experiment_dfamatch.py  experiment_nfa.py  experiment_nfa2dfa.py  experiment_nfamatch.py  experiment_thompson.py  experiments.py  test_dfa.py  test_group.py  test_nfa.py  test_nfa2dfa.py  test_nfagroup.py  test_regex.py  test_state.py
